spacing fixes for p2

--- a/assets/_scss/_homeless-analysis.scss
+++ b/assets/_scss/_homeless-analysis.scss
@@ -493,6 +493,7 @@
   #panel_map {
     top:80px;
     margin-top: 5px;
+    margin-bottom: 45px;
     position: relative;
     overflow: visible;
     background-color: inherit;
@@ -755,12 +756,12 @@
   }
   #p2_2{
     height: 330px;
-    margin-bottom:30px;
+    margin-bottom:40px;
   }
 
   #p2_2_legend{
     position: relative;
-    height: 75px;
+    height: 65px;
     width: 750px;
     margin-left: 10px;
   }
